# wp-editer

./: .cnb.yml  .envs.yml  .gitignore  CHANGELOG.en.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  TESTING_SUMMARY.md  TEST_OPTIMIZATION_ANALYSIS.md  build.rs  coverage.sh  error.txt  system-manage-backup.jsx
.cargo/: config
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  release.yml
_gal/: adm.gxl  work.gxl
_gal/tpl/: Cargo.toml
config/: config.toml
crates/migrations/: Cargo.toml  README.md
crates/migrations/src/: lib.rs  m20250101_000001_create_tables.rs
crates/migrations/src/entity/: knowledge_config.rs  mod.rs
crates/migrations/src/sql/: V001__init_database.sql  V002__seed_data.sql
docs/: API.md  BRANCH_PROTECTION_RULES.md  BRANCH_SOURCE_AND_MATURITY_CONTROL.md  CONFIGURATION.md  INDEX.md  PROJECT_STRUCTURE.md  README.md  RELEASE_MANAGEMENT.md
scripts/: extract-changelog.sh
src/: error.rs  lib.rs  main.rs
src/api/: debug.rs  knowledge.rs  mod.rs
src/db/: knowledge_config.rs  mod.rs  pool.rs
src/server/: app.rs  examples.rs  mod.rs  setting.rs
src/utils/: format.rs  knowledge.rs  mod.rs  oml.rs  oml_formatter.rs  wpl.rs  wpl_formatter.rs
tests/: error_test.rs  integration_test.rs  mod.rs
tests/api/: debug_test.rs  mod.rs  system_test.rs
tests/db/: mod.rs  pool_test.rs
tests/server/: examples_test.rs  mod.rs  setting_test.rs
tests/utils/: mod.rs  oml_formatter_test.rs  oml_test.rs  wpl_formatter_test.rs  wpl_test.rs
web/: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
web/public/doc/: SUMMARY.md  book.toml  custprj-guide.md  domain-guide.md  download.md  workflow.md
web/public/doc/conf/: dvlib_load.md  dvron_moni.md  dvsrc.md  framework.md  wpflow.md
web/public/doc/conf/ldm/: adm..md
web/public/doc/data/: README.md  accessed_log.md
web/public/doc/dfx/: README.md  robust.md  speed_limit.md
web/public/doc/dvlang/: README.md  combinator.md  data-type.md  exact_json.md  json.md  key_val.md  pipeline.md  pre-proc.md  rule.md  syntax.md
web/public/doc/dvlib/: README.md
web/public/doc/oml/: array.md  fun.md  get_var.md  map.md  match.md
web/public/doc/sinks/: README.md  filter.md  format.md  sinks.md
web/public/doc/source/: README.md  multi_source.md  source_dvl.md  source_wpl.md
web/public/doc/spec/: sec_gateway.md
web/public/doc/theme/: stat.js
web/public/doc/usecase/: README.md  check.md  data_stat.md  gen_data.md
web/public/doc/wpl/: combinator.md  data-type.md  key_val.md  package.md  pre-proc.md  syntax.md
web/src/: App.jsx  main.jsx
web/src/configs/request-default/: index.js
web/src/hooks/: useGitHubStarReminder.js  useWorkspace.js  useWorkspace.test.js
web/src/i18n/: index.js
web/src/i18n/locales/: en-US.json  zh-CN.json
web/src/services/: debug.js
web/src/styles/: theme.css
web/src/test/: diff-dependencies.test.js
web/src/utils/: auth.js
web/src/views/components/: Navigation.jsx
web/src/views/components/CodeEditor/: CodeEditor.jsx  CodeEditor.module.css  customHighlight.js  editorTheme.js  omlCompletionTable.en.js
web/src/views/components/CodeEditor/oml/: omlCompletionTable.js  omlLanguage.js
web/src/views/components/CodeEditor/wpl/: wplCompletionTable.en.js  wplCompletionTable.js  wplLanguage.js
web/src/views/components/CodeJarEditor/: CodeJarEditor.jsx  CodeJarEditor.module.css  omlCompletionTable.en.js  omlCompletionTable.js  wplCompletionTable.en.js  wplCompletionTable.js
web/src/views/components/GitHubStarModal/: index.jsx
web/src/views/components/Header/: index.jsx
web/src/views/components/LanguageSwitcher/: index.jsx
web/src/views/components/MonacoEditor/: index.jsx
web/src/views/components/Textarea/: index.jsx
web/src/views/components/VersionInfo/: index.jsx
web/src/views/components/WechatModal/: index.jsx
web/src/views/pages/simulate-debug/: index-old.jsx  index.jsx
