[package]
name = "wp-editor"
version = "{{VERSION}}"
edition = "2024"
build = "build.rs"


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wp_docs = { git = "https://github.com/wp-labs/wp-docs.git", branch = "main" }


[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.12"
actix-files = "0.6"
tracing = "0.1"
simple-log = "2.4"
small_ctor = "0.1"
cargo_metadata = "0.20"
tokio = { version = "1.48", features = ["full"] }
tokio-util = "=0.7.10"
rust-embed = "8.9"
zip = "0.6"
zip-extract = "0.1"
actix-multipart = "0.7"
futures-util = "0.3"
mime_guess = "2"
config = "0.14"
toml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
strum = { version = "0.26", features = ["derive"] }
regex = "1.12"
anyhow = "1"


# PostgreSQL 数据库支持 - SeaORM
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }# --- External: Open API (Public Interfaces) ---

wp-connector-api =  "0.7"
wp-parse-api     =  "0.7"
wp-model-core    =  "0.7"

# --- External: Advanced API (Enterprise Features) ---
wp_ctrl_api   = { package = "wp-ctrl-api",   git = "https://github.com/wp-labs/wp-advanced-api", tag = "v0.0.5-beta" }
wp_enrich_api = { package = "wp-enrich-api", git = "https://github.com/wp-labs/wp-advanced-api", tag = "v0.0.5-beta" }

# --- External: Infrastructure Libraries ---
wp-log       =  "0.1"
wp-error     =  "0.7"
wp-specs     =  "0.7"
wp-conf-base =  "0.1"
wp-data-fmt  =  "0.1"
wp-editor-migrations = { path = "crates/migrations" }

wp_wpl = { package = "wp-lang",git = "{{GIT_REPO_SVR}}/wp-engine", {{GIT_REF}} = "{{WP_ENG_VER}}" }
wp_oml = { package = "wp-oml", git = "{{GIT_REPO_SVR}}/wp-engine", {{GIT_REF}} = "{{WP_ENG_VER}}" }
wp_parser = { package = "wp-parser", git = "{{GIT_REPO_SVR}}/wp-engine", {{GIT_REF}} = "{{WP_ENG_VER}}" }
wp_proj = { package = "wp-proj", git = "{{GIT_REPO_SVR}}/wp-engine", {{GIT_REF}} = "{{WP_ENG_VER}}" }
wp_knowledge = { package = "wp-knowledge", git = "{{GIT_REPO_SVR}}/wp-engine", {{GIT_REF}} = "{{WP_ENG_VER}}" }
wp-data-utils = { package = "wp-data-utils", git = "{{GIT_REPO_SVR}}/wp-engine", {{GIT_REF}} = "{{WP_ENG_VER}}" }


{{PATCH_FLAG}} [patch."{{GIT_REPO_SVR}}/wp-engine"]
{{PATCH_FLAG}} wp-engine     = { path = "../wp-engine" }
{{PATCH_FLAG}} wp_data_utils = { path = "../wp-engine/crates/wp-data-utils" }
{{PATCH_FLAG}} wp-config     = { path = "../wp-engine/crates/wp-config" }
{{PATCH_FLAG}} wp-lang       = { path = "../wp-engine/crates/wp-lang" }
{{PATCH_FLAG}} wp-knowledge  = { path = "../wp-engine/crates/wp-knowledge" }
{{PATCH_FLAG}} wp-cli-core   = { path = "../wp-engine/crates/wp-cli-core" }
{{PATCH_FLAG}} wp-proj       = { path = "../wp-engine/crates/wp-proj" }
